[package]
name = "imlogger"
version = "0.1.0"
edition = "2021"
description = "A Simple Logger for Rust"
authors = ["Majjcom"]
homepage = "https://github.com/Majjcom/imlogger"
repository = "https://guthub.com/Majjcom/imlogger"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono = "0.4"
